<resources>
    <string name="app_name">Piter Diplomna v3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="piter_diplomna">Piter Diplomna</string>
    <string name="piter_diplomna_tuplovdiv_bg">Piter.Diplomna@tuplovdiv.bg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello from the Home fragment</string>
    <string name="button">Button</string>
    <string name="Begin_date">Begin date</string>
    <string name="EndDate">End Date</string>
    <string-array name="ListItems">
        <item>Add task</item>
        <item>Review tasks</item>
        <item>View calendar</item>
    </string-array>
    <string name="Enter_task">Enter task</string>
    <string name="Enter_priority">Enter priority</string>
    <string name="Add_task_btn">Add task</string>
    <string name="Add_task_type">Add task type</string>
    <string name="mainDragmentBtn">I Like it!</string>
    <string name="Add_type_task">Add type task</string>
    <string name="Add_task_resourse">Add task resourse</string>
    <string name="hello_from_add_task_fragment">Hello from add task fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_title_not_found">This name is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="LoadingTxt">Loading...</string>
    <string name="Add_title">Add Title</string>
    <string name="Add_task_desciption">Add task description</string>
    <string name="userListDoneBtn">Done</string>
    <string name="begin_date">Begin date</string>
    <string name="check">Check</string>
    <string name="name">Title</string>
    <string name="description">Description</string>
    <string name="end_date">End Date</string>
    <string name="select_users">Select users</string>
    <string name="send">Send</string>
    <string name="registerBtn">REGISTER</string>
    <string name="prompt_fname">First Name</string>
    <string name="promps_lname">Last Name</string>
    <string name="promps_Cname">Company Name</string>
    <string name="promps_CDesc">Company Description</string>
    <string name="defaultValuePending">Pending</string>
    <string name="Comments_hint">Comments</string>
    <string-array name="listStatus">
        <item>Pending</item>
        <item>Done</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>




    <string-array name="listArray">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
